# whats-going-on

./: .gitignore  README.md  deno.json
.config/: dotnet-tools.json
daemon/core/: Cargo.toml
daemon/core/src/: cbor.rs  config.rs  generated.rs  lib.rs  rpc.rs  traits.rs  wire.rs
daemon/host/src/: cert.rs  lib.rs  server.rs  shell_integration.rs  terminal.rs
daemon/macos/: Cargo.toml  build.rs
daemon/macos/src/: fs.rs  installer.rs  ipc.rs  lib.rs  pairing_ui.rs  tray.rs
daemon/windows/: Cargo.toml
daemon/windows/src/: fs.rs  ipc.rs  lib.rs  pairing_ui.rs  service.rs  tray.rs
protocol/: README.md
protocol/schemas/config/: client_credentials.bdl  system_config.bdl
protocol/schemas/rpc/: filesystem.bdl  pairing.bdl
scripts/codegen/rust/: main.ts
scripts/macos/: dev-daemons.sh  kill-daemons.sh  package-daemon-dmg.sh  pair-dev.sh
scripts/windows/: dev-daemons.ps1  package-daemon-msi.ps1  package-daemon.ps1  pair-dev.ps1  trust-daemon-dev-certificate.ps1
web/: deno.json  uno.config.ts
web/src/: main.tsx  styles.css
web/src/protocol/: rpc.ts
web/src/state/: connection.ts  explorer.ts  machine-modal.ts  machine-store.ts  machine.tsx  rpc-session.ts  terminal-shells.ts  types.ts  workbench.ts
web/src/tools/: check-daemon.ts
web/src/view/: index.tsx  state.tsx
web/src/view/machine-panel/: add-machine-form.tsx  index.tsx  machine-modal.tsx  machine-panel.tsx  state.ts  tool-menu.tsx
web/src/view/machine-rail/: index.tsx  machine-context-menu.tsx
web/src/view/top-bar/: app-topbar.tsx  connection-pill.tsx
web/src/view/ui/: floating-menu.tsx
web/src/view/workbench/: index.tsx
web/src/view/workbench/pane-layout/: index.tsx  pane-view.tsx  tab-drag.ts  tab-item.tsx
web/src/view/workbench/tool/: index.tsx
web/src/view/workbench/tool/daemon/: index.tsx
web/src/view/workbench/tool/files/: context.tsx  index.tsx  state.ts
web/src/view/workbench/tool/files/content/: index.tsx
web/src/view/workbench/tool/files/content/directory/: entry-details.tsx  entry-icon.tsx  file-table.tsx  index.tsx
web/src/view/workbench/tool/files/content/file-viewer/: big-file-warning.tsx  index.tsx  state.tsx
web/src/view/workbench/tool/files/content/file-viewer/footer/: index.tsx
web/src/view/workbench/tool/files/content/file-viewer/impl/: index.ts
web/src/view/workbench/tool/files/content/file-viewer/impl-detector/: index.ts
web/src/view/workbench/tool/files/content/file-viewer/impl/hex/: index.tsx
web/src/view/workbench/tool/files/content/file-viewer/impl/markdown/: index.tsx
web/src/view/workbench/tool/files/content/file-viewer/impl/pdf/: index.tsx
web/src/view/workbench/tool/files/content/viewer/: file-open-prompt.tsx  file-preview.ts  index.tsx  types.ts
web/src/view/workbench/tool/files/content/viewer/hex/: index.tsx
web/src/view/workbench/tool/files/content/viewer/text/: index.tsx
web/src/view/workbench/tool/files/footer/: index.tsx
web/src/view/workbench/tool/files/navbar/: index.tsx  path-crumbs.tsx
web/src/view/workbench/tool/terminal/: index.tsx
(+2 files in other folders)
