[package]
name = "wgo-macos-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[lib]
name = "wgo_macos_daemon"
path = "src/lib.rs"

[[bin]]
name = "wgo-macos-system"
path = "src/bin/system.rs"

[[bin]]
name = "wgo-macos-user"
path = "src/bin/user.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
time = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wgo-daemon-core = { path = "../core" }
wgo-daemon-host = { path = "../host" }
trash = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSAlert", "NSApplication", "NSButton", "NSControl", "NSResponder", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSString"] }
tao = { version = "0.35.3", default-features = false }
tray-icon = { version = "0.24.1", default-features = false }

[build-dependencies]
resvg = { version = "0.47.0", default-features = false }
tiny-skia = { version = "0.12.0", default-features = false }

[dev-dependencies]
tempfile = "3"
