[package]
name = "wgo-windows-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[lib]
name = "wgo_windows_daemon"
path = "src/lib.rs"

[[bin]]
name = "wgo-windows-system"
path = "src/bin/system.rs"

[[bin]]
name = "wgo-windows-user"
path = "src/bin/user.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
http = "1"
notify = "8"
rustls = "0.23"
rustls-pemfile = "2"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trash = "5"
wgo-daemon-host = { path = "../host" }
wgo-daemon-core = { path = "../core" }
web-transport-quinn = { version = "0.11", default-features = true }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8.1"
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_UI_Controls",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
rcgen = "0.14"
tempfile = "3"
